2002-03-06  Werner Koch  <wk@gnupg.org>

	* assuan-client.c (_assuan_read_from_server): Detect END.
	(assuan_transact): Pass it to the data callback.

2002-02-27  Werner Koch  <wk@gnupg.org>

	* assuan-client.c (assuan_transact): Add 2 more arguments to
	support status lines. Passing NULL yields the old behaviour.

	* assuan-handler.c (process_request): Flush data lines send
	without using the data fp.

2002-02-14  Werner Koch  <wk@gnupg.org>

	* assuan-inquire.c (assuan_inquire): Check for a cancel command
	and return ASSUAN_Canceled.  Allow for non-data inquiry.

	* assuan.h: Add a few token specific error codes.

2002-02-13  Werner Koch  <wk@gnupg.org>

	* assuan-defs.h (assuan_context_s): New var CLIENT_PID.
	* assuan-pipe-server.c (_assuan_new_context): set default value.
	* assuan-socket-server.c (accept_connection): get the actual pid.

2002-02-12  Werner Koch  <wk@gnupg.org>

	* assuan-buffer.c (writen,readline) [USE_GNU_PT]: Use pth_read/write.
	* assuan-socket-server.c (accept_connection) [USE_GNU_PTH]: Ditto.

2002-02-01  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (MOSTLYCLEANFILES): New variable.

2002-01-23  Werner Koch  <wk@gnupg.org>

	* assuan-socket-connect.c (LOGERRORX): and removed typo.

2002-01-22  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-socket-connect.c (LOGERRORX): Reverse arguments to fputs.

2002-01-21  Werner Koch  <wk@gnupg.org>

	* assuan-connect.c: Move all except assuan_get_pid to...
	* assuan-pipe-connect.c: this.
	(assuan_pipe_disconnect): Removed.
	(do_finish, do_deinit): New 
	(assuan_pipe_connect): and set them into the context.
	* assuan-socket-connect.c: New.
	
	* assuan-util.c (_assuan_log_sanitized_string): New.

	* assuan-pipe-server.c (assuan_init_pipe_server): Factored most
	code out to ...
	(_assuan_new_context): new func.
	(_assuan_release_context): New
	* assuan-connect.c (assuan_pipe_connect): Use the new functions.

2002-01-20  Werner Koch  <wk@gnupg.org>
